@@ -421,7 +421,9 @@ public class Realms extends AbstractLifecycleComponent implements Iterable<Realm
 
     @Override
     protected void doClose() throws IOException {
-        IOUtils.close(allConfiguredRealms.stream().filter(r -> r instanceof Closeable).map(r -> (Closeable) r).toList());
+        IOUtils.close(
+            allConfiguredRealms.stream().filter(r -> r instanceof Closeable).map(r -> (Closeable) r).collect(Collectors.toList())
+        );
     }
 
     private void addNativeRealms(List<Realm> realms) throws Exception {
